# cpp-toolchain

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  aarch64.config  build.sh  cmake.bzl  config.bzl  crosstool-ng.BUILD  ct-ng-menuconfig.sh  docker-build.sh  docker-make.sh  docker.sh  macos.sh  makefile  package.json  portable-toolchain.sh  rules_foreign_cc.bzl  tar.bzl  tools.sh  wipal.ergo  workspace.ergo  x86_64.config
.bcr/: config.yml
.bcr/bazel/: metadata.template.json  source.template.json
.github/workflows/: bazel.yml  bazel_impl.yml  build-toolchain.yml  cmake.yml  cmake_impl.yml  release.yml  release_prep.sh  version-info.yml
.github/workflows/notes/: toolchain.md
assets/: MODULE.bazel  update.py
bazel/: .bazelrc  BUILD  MODULE.bazel  README.md  extensions.bzl  llvm_tool.bzl  toolchain.bzl
bazel/detail/: BUILD  host.bzl  http_archive_with_override.bzl  llvm.BUILD  sysroot.BUILD
bazel/detail/args/: BUILD  target.bzl
bazel/detail/artifacts/: BUILD
bazel/detail/assets/: BUILD  assets.bzl  assets.json  requirements_lock.txt  update.py
bazel/detail/compilation_mode/: BUILD
bazel/detail/features/: BUILD
bazel/detail/features/optimize/: BUILD
bazel/detail/features/sanitizers/: BUILD
bazel/detail/features/std/: BUILD  standards.bzl
bazel/detail/features/warnings/: BUILD
bazel/detail/tools/: BUILD  wrapper.bat  wrapper.ps1  wrapper.sh
bazel/detail/windows/: find.bzl  sdk.BUILD
bazel/detail/xcode/: find.bzl  find.sh  sdk.BUILD
bazel/docs/: BUILD  extensions.md  features.md  llvm_tool.md  toolchain.md
bazel/feature/: BUILD  README.md  doc.bzl
bazel/feature/misc/: BUILD
bazel/feature/optimize/: BUILD
bazel/feature/sanitizers/: BUILD
bazel/feature/static/: BUILD
bazel/feature/std/: BUILD  standards.bzl
bazel/feature/warnings/: BUILD
bazel/platform/: BUILD
bazel/test/: BUILD  MODULE.bazel  main.c  main.cpp
cmake/: .gitignore  download.cmake  toolchain.cmake
cmake/portable_cc_toolchain/: CMakeLists.txt  aarch64-unknown-linux-musl.cmake  assets.cmake  download.cmake  toolchain.cmake
cmake/portable_cc_toolchain/private/: assets.cmake  download.cmake
cmake/test/: CMakeLists.txt  bar.c  export.h  foo.c  lib.cpp  lib.hpp  main.c  main.cpp  test.sh
cmake/version/: CMakeLists.txt  main.cpp
ct-ng-build/: x86_64.config
docker/: Dockerfile  lgs-gitlab.crt  lgs-rootca.crt  lgs-subca.crt  setup.sh
gcc/: .gitignore  Makefile
gcc/targets/aarch64-unknown-linux-gnu/: .config
gcc/targets/armv7-unknown-linux-gnueabihf/: .config
linux/: BUILD  aarch64-unknown-linux-gnu.cfg  aarch64-unknown-linux-gnu.config  arm-unknown-linux-gnueabihf.config  armv7-unknown-linux-gnueabihf.cfg  armv7-unknown-linux-gnueabihf.config  build.sh  dir.ergo  gcc-toolchain.cmake  llvm-toolchain.cmake  tools.sh  x86_64-unknown-linux-gnu.cfg  x86_64-unknown-linux-gnu.config  x86_64.config
linux/crosstool-ng/: armv7-unknown-linux-gnueabihf.config  x86_64-unknown-linux-gnu.config
linux/docker/: Dockerfile
linux/targets/: aarch64-unknown-linux-gnu.cfg  x86_64-unknown-linux-gnu.cfg
macos/: BUILD  arm64-apple-ios.cfg  arm64-apple-macos.cfg  arm64e-apple-ios.cfg  arm64e-apple-macos.cfg  dir.ergo  tools.sh  x86_64-apple-macos.cfg
patches/: 50611.patch  57594.patch  hwcap2.patch  intelpt.patch
test/: bar.c  foo.c  main.c
toolchain/: BUILD  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  cmake.bzl  config.bzl  host.bzl  llvm_version.bzl  tar.bzl
toolchain/caches/: compiler-rt.cmake  llvm.cmake  openmp.cmake
toolchain/clang/: aarch64-unknown-linux-musl.cfg  x86_64-unknown-linux-musl.cfg
toolchain/cmake/: gcc.cmake  host-triple.cmake  libxml2.cmake  llvm-darwin.cmake  llvm-linux.cmake  llvm.cmake
toolchain/gcc/: .gitignore  BUILD  CMakeLists.txt  Makefile  patch.config
toolchain/gcc/targets/aarch64-unknown-linux-gnu/: .config  defconfig
toolchain/gcc/targets/aarch64-unknown-linux-musl/: defconfig
toolchain/gcc/targets/armv7-unknown-linux-gnueabihf/: .config  defconfig
toolchain/gcc/targets/x86_64-unknown-linux-gnu/: .config  defconfig
toolchain/gcc/targets/x86_64-unknown-linux-musl/: defconfig
toolchain/linux/: BUILD  build.sh  gcc-toolchain.cmake
toolchain/linux/targets/: armv7-unknown-linux-gnueabihf.cfg
toolchain/macos/: BUILD  arm64-apple-macos.cfg  arm64e-apple-ios.cfg  defs.bzl
toolchain/patches/: musl.patch
toolchain/scripts/: tar.py
toolchain/targets/x86_64-unknown-linux-gnu/: defconfig
toolchain/toolchains/: gcc.cmake  llvm.cmake  macos.cmake
toolchain/util/: BUILD  tar.bzl  tar.py
