module(
    name = "wut",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "crosstool-ng",
    build_file = "crosstool-ng.BUILD",
    integrity = "sha256-L96DuNLB1QMzZeFkE2ShC3bg0kP/WjqDH39BUd3/4OI=",
    strip_prefix = "crosstool-ng-cf6b1740a14634406bb3426309dd92af8faa06fb",
    url = "https://github.com/crosstool-ng/crosstool-ng/archive/cf6b1740a14634406bb3426309dd92af8faa06fb.tar.gz",
    # strip_prefix = "crosstool-ng-902fab451bdaf4a44f834becee3c3ba5a1894e05",
    # url = "https://github.com/crosstool-ng/crosstool-ng/archive/902fab451bdaf4a44f834becee3c3ba5a1894e05.tar.gz",
)

http_archive(
    name = "llvm-project",
    build_file_content = 'filegroup(name = "llvm-project", srcs = glob(["**/*"]), visibility = ["//visibility:public"])',
    patch_args = ["-p1"],
    patches = [
        "//:patches/50611.patch",
    ],
    # integrity = "sha256-C1hVem0yzu6XyNUzpZuSEth+D8TSgzkk62xhEkfbLyo=",
    # strip_prefix = "llvm-project-18.1.8.src",
    # url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.8/llvm-project-18.1.8.src.tar.xz",
    strip_prefix = "llvm-project-17.0.6.src",
    url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/llvm-project-17.0.6.src.tar.xz",
)

http_archive(
    name = "zlib",
    build_file_content = 'filegroup(name = "zlib", srcs = glob(["**/*"]), visibility = ["//visibility:public"])',
    integrity = "sha256-mpOyt9/ax3zrpaVYpYDnRmfdb+3kWFuR7vtg8Dty3yM=",
    strip_prefix = "zlib-1.3.1",
    url = "https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz",
)

rules_foreign_cc_toolchains = use_extension("rules_foreign_cc.bzl", "rules_foreign_cc_toolchains")
