module(
    name = "portable_cc_toolchain",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")

bazel_dep(name = "rules_python", version = "1.2.0", dev_dependency = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//detail/assets:requirements_lock.txt",
)
use_repo(pip, "pypi")

host_platform = use_extension("@platforms//host:extension.bzl", "host_platform")
use_repo(host_platform, "host_platform")

assets = use_extension("//detail/assets:assets.bzl", "assets")
use_repo(assets, "llvm-x86_64-unknown-linux-gnu")
use_repo(assets, "llvm-arm64-apple-macos")
use_repo(assets, "llvm-x86_64-apple-macos")
use_repo(assets, "sysroot-x86_64-unknown-linux-gnu")
use_repo(assets, "sysroot-aarch64-unknown-linux-gnu")
use_repo(assets, "sysroot-armv7-unknown-linux-gnueabihf")

find_xcode_sdk = use_repo_rule("//detail/xcode:find.bzl", "find_xcode_sdk")

find_xcode_sdk(
    name = "xcode-macosx",
    sdk = "macosx",
)

find_xcode_sdk(
    name = "xcode-iphoneos",
    sdk = "iphoneos",
)

find_xcode_sdk(
    name = "xcode-appletvos",
    sdk = "appletvos",
)

find_xcode_sdk(
    name = "xcode-xros",
    sdk = "xros",
)
