module(
    name = "build-cpp-toolchain",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "llvm-project",
    build_file_content = 'filegroup(name = "llvm-project", srcs = glob(["**/*"]), visibility = ["//visibility:public"])',
    integrity = "sha256-gkAf6nt50AeAQ/dZi4NShNZlCnW5PmS292Hqe2MJdQE=",
    patch_args = ["-p1"],
    patches = [
        "//:patches/50611.patch",
    ],
    strip_prefix = "llvm-project-19.1.7.src",
    url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/llvm-project-19.1.7.src.tar.xz",
)

http_archive(
    name = "zlib",
    build_file_content = 'filegroup(name = "zlib", srcs = glob(["**/*"]), visibility = ["//visibility:public"])',
    integrity = "sha256-mpOyt9/ax3zrpaVYpYDnRmfdb+3kWFuR7vtg8Dty3yM=",
    strip_prefix = "zlib-1.3.1",
    url = "https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz",
)

llvm_version = use_repo_rule("//:llvm_version.bzl", "llvm_version")

llvm_version(name = "llvm_version")
