module(
    name = "test",
    version = "0.0.0",
)

bazel_dep(name = "portable_cc_toolchain")
local_path_override(
    module_name = "portable_cc_toolchain",
    path = "..",
)

toolchain = use_extension("@portable_cc_toolchain//:extensions.bzl", "toolchain")
use_repo(toolchain, "portable_cc_toolchains")

register_toolchains("@portable_cc_toolchains//...")
