module(
    name = "test",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "portable_cc_toolchain")
local_path_override(
    module_name = "portable_cc_toolchain",
    path = "..",
)

# https://github.com/bazelbuild/bazel/issues/24426#issuecomment-2574862618
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", dev_dependency = True)

toolchain = use_extension("@portable_cc_toolchain//:extensions.bzl", "toolchain")
